deleting target from repository and creating fake consumptions